==> ARMmbed/mbed-os/features/netsocket/emac-drivers/TARGET_NXP_EMAC/TARGET_LPC546XX/lpc546xx_emac.cpp <==
#include <ctype.h>
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "netsocket/nsapi_types.h"
#include "mbed_shared_queues.h"
#include "fsl_phy.h"
#include "lpc546xx_emac_config.h"
#include "lpc546xx_emac.h"
#define ENET_BuffSizeAlign(n) ENET_ALIGN(n, ENET_BUFF_ALIGNMENT)
#define ENET_ALIGN(x,align)   ((unsigned int)((x) + ((align)-1)) & (unsigned int)(~(unsigned int)((align)- 1)))
#define FLAG_TX  1
#define FLAG_RX  2
#define THREAD_PRIORITY (osPriorityNormal)
#define PHY_TASK_PERIOD_MS      200

bool LPC546XX_EMAC::low_level_init_successful()
{
    status_t status;
    uint8_t i;
    uint32_t refClock;
    phy_speed_t phy_speed;
    phy_duplex_t phy_duplex;
    uint32_t phyAddr = 0;
    bool link = false;
    enet_config_t config;
    uint32_t timeout = 0xFFFU;

    lpc546xx_init_eth_hardware();

    refClock = CLOCK_GetFreq(kCLOCK_CoreSysClk);

    status = PHY_Init(ENET, phyAddr, refClock);
    if (status != kStatus_Success) {
        return false;
    }

    ENET_GetDefaultConfig(&config);
    config.multiqueueCfg = NULL;

    while ((!link) && timeout) {
        PHY_GetLinkStatus(ENET, phyAddr, &link);
        if (link) {
            /* Get link information from PHY */
            PHY_GetLinkSpeedDuplex(ENET, phyAddr, &phy_speed, &phy_duplex);

            /* Change the MII speed and duplex for actual link status. */
            config.miiSpeed = (enet_mii_speed_t)phy_speed;
            config.miiDuplex = (enet_mii_duplex_t)phy_duplex;
        }
        timeout--;
    }

    if (!link) {
        return false;
    }

    AT_NONCACHEABLE_SECTION_ALIGN(static enet_rx_bd_struct_t rx_desc_start_addr[ENET_RX_RING_LEN], ENET_BUFF_ALIGNMENT);
    AT_NONCACHEABLE_SECTION_ALIGN(static enet_tx_bd_struct_t tx_desc_start_addr[ENET_TX_RING_LEN], ENET_BUFF_ALIGNMENT);

    /* prepare the buffer configuration. */
   enet_buffer_config_t buffCfg = {
       ENET_RX_RING_LEN,
       ENET_TX_RING_LEN,
       &tx_desc_start_addr[0],
       &tx_desc_start_addr[0],
       &rx_desc_start_addr[0],
       &rx_desc_start_addr[ENET_RX_RING_LEN],
       rx_ptr,
       ENET_BuffSizeAlign(ENET_ETH_MAX_FLEN),
   };

    /* Create buffers for each receive BD */
    for (i = 0; i < ENET_RX_RING_LEN; i++) {
        rx_buff[i] = memory_manager->alloc_heap(buffCfg.rxBuffSizeAlign, ENET_BUFF_ALIGNMENT);
        if (NULL == rx_buff[i])
            return false;

        rx_ptr[i] = (uint32_t)memory_manager->get_ptr(rx_buff[i]);
    }

    ENET_Init(ENET, &config, hwaddr, refClock);

    /* Enable the tx & rx interrupt. */
    ENET_EnableInterrupts(ENET, kENET_DmaTx | kENET_DmaRx);

    /* Create the handler. */
    ENET_CreateHandler(ENET, &g_handle, &config, &buffCfg, &LPC546XX_EMAC::ethernet_callback, this);

    /* Initialize Descriptor. */
    ENET_DescriptorInit(ENET, &config, &buffCfg);

    return true;
}

emac_mem_buf_t *LPC546XX_EMAC::low_level_input()
{
    enet_rx_bd_ring_t *rxBdRing = (enet_rx_bd_ring_t *)&g_handle.rxBdRing[0];
    enet_rx_bd_struct_t *bdPtr = rxBdRing->rxBdBase + rxBdRing->rxGenIdx;
    emac_mem_buf_t *p = NULL;
    emac_mem_buf_t *temp_rxbuf = NULL;
    uint32_t length = 0;

    /* Determine if a frame has been received */
    if ((bdPtr->control & ENET_RXDESCRIP_WR_OWN_MASK) != 0) {
        return p;
    }

#ifdef LOCK_RX_THREAD
    /* Get exclusive access */
    TXLockMutex.lock();
#endif

    /* Determine if the received frame has an error */
    if ((bdPtr->control & ENET_RXDESCRIP_WR_ERRSUM_MASK) != 0) {
        /* Re-use the same buffer in case of error */
        update_read_buffer(bdPtr, NULL);
    } else {
        if (bdPtr->control & ENET_RXDESCRIP_WR_LD_MASK) {
            length = (bdPtr->control & ENET_RXDESCRIP_WR_PACKETLEN_MASK) - 4;
        } else {
            length = rxBdRing->rxBuffSizeAlign;
        }

        /* Zero-copy */
        p = rx_buff[rxBdRing->rxGenIdx];
        memory_manager->set_len(p, length);

        /* Attempt to queue new buffer */
        temp_rxbuf = memory_manager->alloc_heap(rxBdRing->rxBuffSizeAlign, ENET_BUFF_ALIGNMENT);
        if (NULL == temp_rxbuf) {
            /* Re-queue the same buffer */
            update_read_buffer(bdPtr, NULL);

#ifdef LOCK_RX_THREAD
            TXLockMutex.unlock();
#endif

            return NULL;
        }

        rx_buff[rxBdRing->rxGenIdx] = temp_rxbuf;
        rx_ptr[rxBdRing->rxGenIdx] = (uint32_t)memory_manager->get_ptr(rx_buff[rxBdRing->rxGenIdx]);

        update_read_buffer(bdPtr, (uint8_t*)rx_ptr[rxBdRing->rxGenIdx]);
    }

#ifdef LOCK_RX_THREAD
    osMutexRelease(TXLockMutex);
#endif

    return p;
}

void LPC546XX_EMAC::thread_function(void* pvParameters)
{
    struct LPC546XX_EMAC *lpc_enet = static_cast<LPC546XX_EMAC *>(pvParameters);

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX | FLAG_TX, osFlagsWaitAny, osWaitForever);

        MBED_ASSERT(!(flags & osFlagsError));

        if (flags & FLAG_RX) {
            lpc_enet->packet_rx();
        }

        if (flags & FLAG_TX) {
            lpc_enet->packet_tx();
        }
    }
}

void LPC546XX_EMAC::packet_rx()
{
    enet_rx_bd_ring_t *rxBdRing = (enet_rx_bd_ring_t *)&g_handle.rxBdRing[0];
    enet_rx_bd_struct_t *bdPtr = rxBdRing->rxBdBase + rxBdRing->rxGenIdx;
    bool suspend = false;

    /* Suspend and command for rx. */
    if (ENET->DMA_CH[0].DMA_CHX_STAT & ENET_DMA_CH_DMA_CHX_STAT_RBU_MASK) {
        suspend = true;
    }

    while ((bdPtr->control & ENET_RXDESCRIP_WR_OWN_MASK) == 0) {
        input();
        /* rxGenIdx gets updated, gets the next receive buffer descriptor */
        bdPtr = rxBdRing->rxBdBase + rxBdRing->rxGenIdx;
    }

    /* Set command for rx when it is suspend. */
    if (suspend)
    {
        ENET->DMA_CH[0].DMA_CHX_RXDESC_TAIL_PTR = ENET->DMA_CH[0].DMA_CHX_RXDESC_TAIL_PTR;
    }
}

bool LPC546XX_EMAC::link_out(emac_mem_buf_t *buf)
{
    enet_tx_bd_ring_t *txBdRing = (enet_tx_bd_ring_t *)&g_handle.txBdRing[0];
    uint32_t index = txBdRing->txGenIdx;

    // If buffer is chained or not aligned then make a contiguous aligned copy of it
    if (memory_manager->get_next(buf) ||
        reinterpret_cast<uint32_t>(memory_manager->get_ptr(buf)) % ENET_BUFF_ALIGNMENT) {
        emac_mem_buf_t *copy_buf;
        copy_buf = memory_manager->alloc_heap(memory_manager->get_total_len(buf), ENET_BUFF_ALIGNMENT);
        if (NULL == copy_buf) {
            memory_manager->free(buf);
            return false;
        }

        // Copy to new buffer and free original
        memory_manager->copy(copy_buf, buf);
        memory_manager->free(buf);
        buf = copy_buf;
    }

    /* Check if a descriptor is available for the transfer. */
    if (xTXDCountSem.wait(0) == 0) {
        memory_manager->free(buf);
        return false;
    }

    /* Get exclusive access */
    TXLockMutex.lock();

    /* Save the buffer so that it can be freed when transmit is done */
    tx_buff[index] = buf;

    if (ENET_SendFrame(ENET, &g_handle, static_cast<uint8_t *>(memory_manager->get_ptr(buf)), memory_manager->get_len(buf)) != kStatus_Success) {
        memory_manager->free(buf);
        tx_buff[index] = NULL;
        return false;
    }

    /* Restore access */
    TXLockMutex.unlock();

    return true;
}

void LPC546XX_EMAC::phy_task()
{
    static PHY_STATE prev_state = {STATE_UNKNOWN, (phy_speed_t)STATE_UNKNOWN, (phy_duplex_t)STATE_UNKNOWN};
    uint32_t phyAddr = 0;
    // Get current status
    PHY_STATE crt_state;
    bool connection_status;

    PHY_GetLinkStatus(ENET, phyAddr, &connection_status);
    crt_state.connected = connection_status;
    // Get the actual PHY link speed
    PHY_GetLinkSpeedDuplex(ENET, phyAddr, &crt_state.speed, &crt_state.duplex);

    // Compare with previous state
    if (crt_state.connected != prev_state.connected && emac_link_state_cb) {
        emac_link_state_cb(crt_state.connected);
    }

    if (crt_state.speed != prev_state.speed) {
        uint32_t fes = ENET->MAC_CONFIG;
        fes &= ~ENET_MAC_CONFIG_FES_MASK;
        if (prev_state.speed != (phy_speed_t)STATE_UNKNOWN) {
            fes |= ENET_MAC_CONFIG_FES(!crt_state.speed);
        } else {
            fes |= ENET_MAC_CONFIG_FES(crt_state.speed);
        }

        ENET->MAC_CONFIG = fes;
    }

    prev_state = crt_state;
}

bool LPC546XX_EMAC::power_up()
{
    /* Initialize the hardware */
    if (!low_level_init_successful()) {
        return false;
    }

    /* Worker thread */
    thread = create_new_thread("LPC546XX_EMAC_thread", &LPC546XX_EMAC::thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &thread_cb);

    /* Trigger thread to deal with any RX packets that arrived before thread was started */
    rx_isr();

    /* PHY monitoring task */
    prev_state.connected = STATE_UNKNOWN;
    prev_state.speed = (phy_speed_t)STATE_UNKNOWN;
    prev_state.duplex = (phy_duplex_t)STATE_UNKNOWN;

    phy_task_handle = mbed::mbed_event_queue()->call_every(PHY_TASK_PERIOD_MS, mbed::callback(this, &LPC546XX_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    /* Active TX/RX. */
    ENET_StartRxTx(ENET, 1, 1);

    return true;
}

uint32_t LPC546XX_EMAC::get_mtu_size() const
{
    return LPC546XX_ETH_MTU_SIZE;
}

void LPC546XX_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, LPC546XX_ETH_IF_NAME, (size < sizeof(LPC546XX_ETH_IF_NAME)) ? size : sizeof(LPC546XX_ETH_IF_NAME));
}

uint8_t LPC546XX_EMAC::get_hwaddr_size() const
{
    return LPC546XX_HWADDR_SIZE;
}
