==> CurryGuy/mbed-os/features/netsocket/emac-drivers/TARGET_STM_EMAC/stm32h7_emac.cpp <==
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "mbed_shared_queues.h"
#include "netsocket/nsapi_types.h"
#include "stm32xx_emac_config.h"
#include "stm32xx_emac.h"
#include "lan8742/lan8742.h"
#define FLAG_RX                 1
#define THREAD_PRIORITY         (osPriorityHigh)
#define PHY_TASK_PERIOD_MS      200
#define ETH_ARCH_PHY_ADDRESS    (0x00)
#define STM_HWADDR_SIZE         (6)
#define STM_ETH_MTU_SIZE        1500
#define STM_ETH_IF_NAME "st"

bool STM32_EMAC::low_level_init_successful()
{
    MPU_Config();

    /* Init ETH */
    uint8_t MACAddr[6];
    EthHandle.Instance = ETH;
#if (MBED_MAC_ADDRESS_SUM != MBED_MAC_ADDR_INTERFACE)
    MACAddr[0] = MBED_MAC_ADDR_0;
    MACAddr[1] = MBED_MAC_ADDR_1;
    MACAddr[2] = MBED_MAC_ADDR_2;
    MACAddr[3] = MBED_MAC_ADDR_3;
    MACAddr[4] = MBED_MAC_ADDR_4;
    MACAddr[5] = MBED_MAC_ADDR_5;
#else
    mbed_mac_address((char *)MACAddr);
#endif
    EthHandle.Init.MACAddr = &MACAddr[0];
    EthHandle.Init.MediaInterface = HAL_ETH_RMII_MODE;
    EthHandle.Init.RxDesc = DMARxDscrTab;
    EthHandle.Init.TxDesc = DMATxDscrTab;
    EthHandle.Init.RxBuffLen = 1524;

    if (HAL_ETH_Init(&EthHandle) != HAL_OK)
    {
        return false;
    }

    memset(&TxConfig, 0, sizeof(ETH_TxPacketConfig));
    TxConfig.Attributes = ETH_TX_PACKETS_FEATURES_CSUM | ETH_TX_PACKETS_FEATURES_CRCPAD;
    TxConfig.ChecksumCtrl = ETH_CHECKSUM_IPHDR_PAYLOAD_INSERT_PHDR_CALC;
    TxConfig.CRCPadCtrl = ETH_CRC_PAD_INSERT;

    for(unsigned idx = 0; idx < ETH_RX_DESC_CNT; ++idx)
    {
        HAL_ETH_DescAssignMemory(&EthHandle, idx, Rx_Buff[idx], NULL);
    }

    return _phy_init();
}

bool STM32_EMAC::link_out(emac_mem_buf_t *buf)
{
    bool success = false;
    uint32_t i = 0;
    uint32_t frameLength = 0;
    emac_mem_buf_t *q;
    ETH_BufferTypeDef Txbuffer[ETH_TX_DESC_CNT];

    /* Get exclusive access */
    TXLockMutex.lock();

    /* copy frame from pbufs to driver buffers */
    for (q = buf; q != NULL; q = memory_manager->get_next(q)) {
        if (i >= ETH_TX_DESC_CNT) {
            goto error;
        }

        const uint32_t len = memory_manager->get_total_len(q);
        Txbuffer[i].buffer = (uint8_t*)memory_manager->get_ptr(q);
        Txbuffer[i].len = len;
        frameLength += len;

        if (i > 0)
        {
            Txbuffer[i - 1].next = &Txbuffer[i];
        }

        if (memory_manager->get_next(q) == NULL)
        {
            Txbuffer[i].next = NULL;
        }

        i++;
    }

    TxConfig.Length = frameLength;
    TxConfig.TxBuffer = Txbuffer;

    /* Clean and Invalidate data cache */
    SCB_CleanInvalidateDCache();

    success = HAL_ETH_Transmit(&EthHandle, &TxConfig, 0) == HAL_OK;

error:

    memory_manager->free(buf);

    /* Restore access */
    TXLockMutex.unlock();

    return success;
}

int STM32_EMAC::low_level_input(emac_mem_buf_t **buf)
{
    ETH_BufferTypeDef RxBuff;
    uint32_t frameLength = 0;

    if (HAL_ETH_GetRxDataBuffer(&EthHandle, &RxBuff) == HAL_OK)
    {
        /* Invalidate data cache for ETH Rx Buffers */
        SCB_InvalidateDCache_by_Addr((uint32_t*)Rx_Buff, (ETH_RX_DESC_CNT * ETH_MAX_PACKET_SIZE));

        if (HAL_ETH_GetRxDataLength(&EthHandle, &frameLength) != HAL_OK)
        {
            return -1;
        }

        if (frameLength > 0) {
            *buf = memory_manager->alloc_heap(frameLength, 0);
        }

        if (*buf != NULL) {
            memory_manager->copy_to_buf(*buf, RxBuff.buffer, frameLength);
        }
    }
    else
    {
        return -1;
    }

    return 0;
}

void STM32_EMAC::packet_rx()
{
    /* move received packet into a new buf */
    while (1) {
        emac_mem_buf_t *p = NULL;
        if (low_level_input(&p) < 0) {
            break;
        }
        if (p) {
            emac_link_input_cb(p);

            HAL_ETH_BuildRxDescriptors(&EthHandle);
        }
    }
}

void STM32_EMAC::thread_function(void *pvParameters)
{
    static struct STM32_EMAC *stm32_enet = static_cast<STM32_EMAC *>(pvParameters);

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX, osFlagsWaitAny, osWaitForever);

        if (flags & FLAG_RX) {
            stm32_enet->packet_rx();
        }
    }
}

void STM32_EMAC::phy_task()
{
    const int32_t status = _phy_get_state();
    const int32_t old_status = (int32_t)phy_status;
    const bool is_up  = _phy_is_up(status);
    const bool was_up = _phy_is_up(old_status);

    if (is_up && !was_up)
    {
        uint32_t duplex, speed;
        ETH_MACConfigTypeDef MACConf;

        if (!_phy_get_duplex_and_speed(status, &speed, &duplex))
        {
            // Default
            duplex = ETH_FULLDUPLEX_MODE;
            speed = ETH_SPEED_10M;
        }

        /* Get MAC Config MAC */
        HAL_ETH_GetMACConfig(&EthHandle, &MACConf); 
        MACConf.DuplexMode = duplex;
        MACConf.Speed = speed;
        HAL_ETH_SetMACConfig(&EthHandle, &MACConf);
        HAL_ETH_Start_IT(&EthHandle);
    }
    else if (was_up && !is_up)
    {
        // Stop ETH
        disable_interrupts();
        HAL_ETH_Stop(&EthHandle);
        enable_interrupts();
    }

    if (emac_link_state_cb) {
        if (is_up && !was_up) {
            emac_link_state_cb(true);
        } else if (!is_up && was_up) {
            emac_link_state_cb(false);
        }
    }

    phy_status = (uint32_t)status;
}

bool STM32_EMAC::power_up()
{
    sleep_manager_lock_deep_sleep();

    /* Initialize the hardware */
    if (!low_level_init_successful()) {
        return false;
    }

    /* Worker thread */
    thread = create_new_thread("stm32_emac_thread", &STM32_EMAC::thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &thread_cb);

    phy_task_handle = mbed::mbed_event_queue()->call_every(PHY_TASK_PERIOD_MS, mbed::callback(this, &STM32_EMAC::phy_task));

#if defined (STM32F767xx) || defined (STM32F769xx) || defined (STM32F777xx)\
      || defined (STM32F779xx)
    rmii_watchdog_thread = create_new_thread("stm32_rmii_watchdog", &STM32_EMAC::rmii_watchdog_thread_function, this, THREAD_STACKSIZE, THREAD_PRIORITY, &rmii_watchdog_thread_cb);
#endif

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    enable_interrupts();

    return true;
}

uint32_t STM32_EMAC::get_mtu_size() const
{
    return STM_ETH_MTU_SIZE;
}

void STM32_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, STM_ETH_IF_NAME, (size < sizeof(STM_ETH_IF_NAME)) ? size : sizeof(STM_ETH_IF_NAME));
}

uint8_t STM32_EMAC::get_hwaddr_size() const
{
    return STM_HWADDR_SIZE;
}
